unpackaged/main/default/objects/Mesure_Temp_rature__c/Mesure_Temp_rature__c.object-meta.xml
<CustomObject>
    <label>Mesure Température</label>
    <nameField>
        <displayFormat>MTC-{00000000}</displayFormat>
        <label>Nom de Mesure Température</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mesures Température</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>