unpackaged/main/default/objects/Mesure_Temp_rature__c/fields/Dossier_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Dossier_d_intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier d&apos;intervention</label>
    <referenceTo>Dossier_de_prise_en_charge__c</referenceTo>
    <relationshipLabel>Mesures Température</relationshipLabel>
    <relationshipName>Mesures_Temp_rature</relationshipName>
    <type>Lookup</type>
</CustomField>