unpackaged/main/default/objects/Mesure_Temp_rature__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Mesures Température</relationshipLabel>
    <relationshipName>Mesures_Temp_rature</relationshipName>
    <type>Lookup</type>
</CustomField>