unpackaged/main/default/objects/Mesure_Temp_rature__c/fields/Temp_rature_en_C__c.field-meta.xml
<CustomField>
    <fullName>Temp_rature_en_C__c</fullName>
    <label>Température en C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>